update feature diem